[tool.poetry]
name = "dap-python"
version = "0.5.0"
description = "Client for Debug Adapter Protocol"
authors = ["Billy <billydevbusiness@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "dap", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
